--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,7 @@
 
       <mat-header-cell *matHeaderCellDef mat-sort-header> {{ header['action'] }} </mat-header-cell>
       <mat-cell *matCellDef="let row">
-        <a (click)="showDriver(row['id'])"><mat-icon>zoom_in</mat-icon></a>
+        <a (click)="showDriverApplication(row['id'])"><mat-icon>open_in_new</mat-icon></a>
       </mat-cell>
     </ng-container>
 
