--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,136 @@
-mat-icon {
+/*mat-icon {
   position: relative;
   top: -30px;
   left: -100px;
+}*/
+
+.floating {
+  float: right;
+  z-index: inherit;
+
+}
+
+.row {
+  position: relative;
+}
+
+.stat-box {
+  width: 30%;
+  min-height: 160px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 6px rgba(0,0,0,0.37);
+  margin: 20px;
+  padding: 2px;
+}
+
+.stat-box.col2 {
+  position: absolute;
+  left: 32%;
+  top: 0px;
+  /*float: left;*/
+}
+
+.stat-box.col3 {
+  position: absolute;
+  left: 64%;
+  top: 0px;
+  /*float: left;*/
+}
+
+.stat-box-header {
+  background-color: lightgrey;
+  padding: 10px;
+  height: 50px;
+  border-radius: 4px;
+}
+
+.stat-box-header.circle {
+  padding: 5px;
+}
+
+.stat-box-header .title {
+  margin: 10px;
+  padding-top: 4px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.stat-box-header a.end {
+  float: right;
+}
+
+.stat-box-header a.data {
+  margin-left: 80px;
+  padding: 4px 8px;
+  border-radius: 6px;
+  font-size: 20px;
+  /*font-weight: 600;*/
+  background: #3A464E;
+  color: #F29C38;
+}
+
+label[class|="key"] {
+  margin-left: 40px;
+  margin-top: 5px;
+  padding: 4px 8px;
+  border-radius: 3px;
+  /*font-size: 20px;*/
+  background: #3A464E;
+  color: white;
+}
+
+label[class$="ok"] {
+  background: darkorange;
+}
+
+label[class$="bad"] {
+  background: darkred;
+}
+
+label[class$="good"] {
+  background: darkgreen;
+}
+
+label[class|="key"] + span {
+  position: absolute;
+  left: 60%;
+  top: 5px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+div.center {
+  /*margin: auto 0;*/
+  text-align: center;
+  padding-top: 25px;
+}
+
+div.no-center {
+
+}
+
+div.no-center > div {
+  position: relative;
+}
+
+.content {
+  min-height: 100%;
+}
+
+span.par {
+  font-size: 40px;
+  font-weight: 800;
+
+}
+mat-grid-tile {
+  /*background: lightslategrey;*/
+}
+
+mat-grid-list {
+  margin-top: 20px;
+}
+
+mat-toolbar {
+  background: lightgrey;
 }
