--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <div class="stat-box-header">
       <span class="title">Total Trips</span>
 
-      <a routerLink="/applications" class="end"><mat-icon>open_in_new</mat-icon></a>
+      <a routerLink="/trips" class="end"><mat-icon>open_in_new</mat-icon></a>
     </div>
 
     <div class="content">
