--- a/src/app/download-csv/download-csv.component.html
+++ b/src/app/download-csv/download-csv.component.html
@@ -1,4 +1,4 @@
-<button mat-mini-fab color="secondary" (click)="download()" matTooltip="Download csv">
+<button mat-mini-fab color="accent" (click)="download()" matTooltip="Download csv">
   <mat-icon aria-label="Download csv">file_download</mat-icon>
 </button>
 
