--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,11 @@
 <h2>Driver Applications</h2>
 
 <p></p>
+<div>
+  <button mat-raised-button color="primary" (click)="openDialog()">Register New Driver</button>
+</div>
+<p></p>
+
 <div *ngIf="!applicationDatabase">
   No pending driver applications found
 </div>
